--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-grotesk:var(--font-grotesk);
@@ -19,6 +20,7 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --primary: #C7702A;
   }
 }
 
