--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
+  --color-main:var(--main);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-grotesk:var(--font-grotesk);
@@ -21,6 +22,7 @@
     --background: #0a0a0a;
     --foreground: #ededed;
     --primary: #C7702A;
+    --main:#1E0202;
   }
 }
 
