--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
   --color-main:var(--main);
+  --color-mainblack:var(--mainblack);
+  --color-mainwhite:var(--mainwhite);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-grotesk:var(--font-grotesk);
@@ -22,7 +24,9 @@
     --background: #0a0a0a;
     --foreground: #ededed;
     --primary: #C7702A;
-    --main:#1E0202;
+    --main:#b11f29;
+    --mainblack:#000000;
+    --mainwhite:#ffffff;
   }
 }
 
